--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ html,body{
     width: 100%;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 #loader{
     height: 100%;
     width: 100%;
@@ -130,6 +134,7 @@ html,body{
     position: relative;
     background-color: #030303;
 }
+
 /* cursor */
 
 #crsr{
@@ -186,7 +191,7 @@ nav{
     margin-top: 15vh;
 }
 
-.hero h2,.hero h3{
+.hero h2{
     text-transform: uppercase;
     font-size: 7vw;
     font-weight: 1000;
@@ -194,8 +199,8 @@ nav{
 }
 
 .hero h2{
-    text-decoration: underline;
-    margin: 0 1vw;
+    border-bottom: 0.6vw solid #fff;
+    padding-bottom: 0.3vw;
 }
 
 .hero h2:hover{
@@ -204,6 +209,151 @@ nav{
     font-weight: 500;
 }
 
-#hero4{
-    line-height: 8vw;
+#hero3 h2:nth-child(2){
+    border-bottom: none;
+    margin: 0vw 0.5vw;
+}
+
+#page1-extra{
+    position: absolute;
+    left: 30%;
+    bottom: 80%;
+}
+
+#page2{
+    height: 100vh;
+    width: 100%;
+    background-color: #151515;
+    position: relative;
+    padding-top: 8vh;
+    overflow-x: hidden;
+}
+
+#video-container{
+    height: 68vh;
+    width: 70vw;
+    position: relative;
+    left: 29%;
+    background-image: url(Showreel-2022-preview-1.jpg);
+}
+
+#video-container img{
+    position: absolute;
+    height: 100%;
+    width: 100.2%;
+    object-fit: cover;
+}
+
+#video-container video{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+#video-cursor{
+    background-color: #FFA63D;
+    height: 9vw;
+    width: 9vw;
+    border-radius: 50%;
+    position: absolute;
+    top:-10%;
+    left: 75%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+}
+
+#video-cursor i{
+    font-size: 3vw;
+}
+
+#page3{
+    min-height: 100vh;
+    width: 100%;
+    background-color: black;
+    position: relative;
+}
+
+#page4{
+    min-height: 100vh;
+    width: 100%;
+    background-color: #151515;
+    position: relative;
+    padding-top: 8vh;
+    overflow-x: hidden;
+}
+
+#page4-content{
+    width: 72vw;
+    position: relative;
+    margin-left: 28%;
+}
+
+#page4-content h1{
+    font-size: 5vw;
+    text-transform: uppercase;
+}
+
+.underline{
+    width: 100%;
+    height: 0.3vh;
+    margin: 5vw 0;
+    background-color: white;
+}
+
+#page4-content>p{
+    font-size: 2.05vw;
+    width: 50%;
+    margin-bottom: 2vw;
+}
+
+#page4-flex{
+    display: flex;
+    margin-top: 9vh;
+    width: 90%;
+    gap: 2.3vw;
+}
+
+#page4-flex img{
+    width: 50%;
+    height:60%;
+    object-fit: cover;
+}
+
+#page4-flex p{
+    font-size: 1.2vw;
+    width: 30%;
+    font-size: 500;
+}
+
+#page4-blue-div{
+    background-color: #3F7DF4;
+    width:35vw;
+    height: 45vw;
+    padding: 6vh 3vw;
+    position: relative;
+    margin-top: -30vh;
+    margin-left: 22vw;
+}
+
+.blue-div-elem{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 0.1vw solid rgba(255, 255, 255, 0.886);
+    padding: 2.5vw 0;
+}
+
+.blue-div-elem h4{
+    font-size: 2vw;
+    font-weight: 500;
+}
+
+.blue-div-elem p{
+    font-size:1vw ;
+    width: 30%;
+    align-items: center;
+    justify-content: center;
+    font-weight: 400;
 }
