--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body{
     align-items: center;
     justify-content: flex-start;
     height: fit-content;
-    overflow: hidden;
+    overflow-y: hidden;
     gap: 3vw;
 }
 
@@ -69,7 +69,7 @@ body{
     animation-iteration-count: infinite;
 }
 
-@keyframes anime {
+@keyframes anime1 {
     0%{
         font-family: "plain light";
         -webkit-text-stroke: 1px #fff;
@@ -149,7 +149,7 @@ body{
 
 #page1{
     width: 100%;
-    height: 100vh;
+    height: 110vh;
     background-color: #151515;
 }
 
@@ -173,18 +173,24 @@ nav{
 }
 
 .hero{
-    font-size: 3.5vw;
+    font-size: 3vw;
     font-weight: 1000;
     line-height: 7vw;
     text-transform: uppercase;
     width: 72%;
     margin-left: 25%;
     height: fit-content;
-    overflow: hidden;
     display: flex;
-    align-items: center;
-    position: relative;
-    z-index: 999;
+    overflow-y: hidden;
+}
+
+#page1 h3{
+    position: absolute;
+    font-family: "silk serif";
+    font-size: 3.3vw;
+    top: 25%;
+    left: 18%;
+    font-weight: 400;
 }
 
 .hero:nth-child(2){
@@ -212,6 +218,7 @@ nav{
 #hero3 h2:nth-child(2){
     border-bottom: none;
     margin: 0vw 0.5vw;
+    color: #fff;
 }
 
 #page1-extra{
@@ -225,22 +232,24 @@ nav{
     width: 100%;
     background-color: #151515;
     position: relative;
-    padding-top: 8vh;
-    overflow-x: hidden;
+    padding-top: 10vh;
+    
 }
 
 #video-container{
-    height: 68vh;
+    height: 66vh;
     width: 70vw;
     position: relative;
     left: 29%;
     background-image: url(Showreel-2022-preview-1.jpg);
+    background-color: red;
+    background-size:  cover;
 }
 
 #video-container img{
     position: absolute;
-    height: 100%;
-    width: 100.2%;
+    height: 70vh;
+    width: 71vw;
     object-fit: cover;
 }
 
@@ -248,6 +257,7 @@ nav{
     height: 100%;
     width: 100%;
     object-fit: cover;
+    opacity: 0;
 }
 
 #video-cursor{
@@ -271,17 +281,158 @@ nav{
 #page3{
     min-height: 100vh;
     width: 100%;
-    background-color: black;
+    background-color: #151515;
     position: relative;
+    padding: 7vh 2vw;
+    margin-top: 15vh;
+    margin-bottom: 5vh;
+}
+
+#page3 h1{
+    margin-left: 28%;
+    font-size: 7vw ;
+    text-transform: uppercase;
+}
+
+#page3 h1::before{
+    content: "02";
+    position: absolute;
+    font-family: "silk serif";
+    font-size: 3.5vw;
+    left: 19%;
+    font-weight: 400;
+}
+
+.underline3{
+    width: 71%;
+    height: 0.3vh;
+    margin-left: 28%;
+    margin-top: 10vh;
+    margin-bottom: 20vh;
+    background-color: white;
+}
+
+#image-div-container{
+    
+    padding: 2vh 2vw;
+    position: relative;
+    padding-bottom: 30vh;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.image-div{
+    background-color: blue;
+    width: 30vw;
+    height: 75vh;
+    flex-shrink: 0;
+    margin: 2vh;
+}
+
+.image-div:nth-child(1){
+    height: 60vh ;
+    width: 25vw;
+}
+
+
+
+img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.page3-circle1{
+    height: 20vw;
+    width: 20vw;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    margin-left: 10vw;
+    margin-top: 25vh;
+}
+
+.page3-circle1 svg{
+    height: 30%;
+}
+
+.page3-circle2{
+    height: 20vw;
+    width: 20vw;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+}
+
+.page3-circle2 svg{
+    height: 30%;
+    rotate:-45deg;
+}
+
+.circle-in{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color:#fff ;
+    color:#000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    scale: 0;
+    transition: all ease 0.8s;
+}
+
+.circle-in p{
+    font-size: 0.8vw;
+    color: #000;
+    font-weight: 500;
+    width: 60%;
+    scale: 0;
+    opacity: 0;
+    transition: all ease 0.5s;
+    transition-delay: 0.7s;
+}
+
+.page3-circle1:hover .circle-in{
+    scale:1;
+    
+} 
+
+.page3-circle1:hover p{
+    scale: 1;
+    opacity: 1;
+}
+
+.page3-circle2:hover .circle-in{
+    scale:1;
+    
+} 
+
+.page3-circle2:hover p{
+    scale: 1;
+    opacity: 1;
 }
 
 #page4{
+    margin-top: 5vh;
     min-height: 100vh;
     width: 100%;
     background-color: #151515;
     position: relative;
     padding-top: 8vh;
-    overflow-x: hidden;
+    padding-right: 5vw;
 }
 
 #page4-content{
@@ -291,14 +442,24 @@ nav{
 }
 
 #page4-content h1{
-    font-size: 5vw;
+    font-size: 7vw;
     text-transform: uppercase;
 }
 
-.underline{
-    width: 100%;
+#page4-content h1::before{
+    content: "03";
+    position: absolute;
+    font-family: "silk serif";
+    font-size: 3.5vw;
+    left: -13%;
+    font-weight: 400;
+}
+
+.underline1{
+    width: 93%;
     height: 0.3vh;
-    margin: 5vw 0;
+    margin-left: 28%;
+    margin: 10vh 0vw;
     background-color: white;
 }
 
@@ -356,4 +517,163 @@ nav{
     align-items: center;
     justify-content: center;
     font-weight: 400;
+}
+
+#page5{
+    min-height: 130vh;
+    width: 100%;
+    background-color: #151515;
+    position: relative;
+    padding-top: 5vh;
+}
+
+.elem1{
+    white-space: nowrap;
+    overflow-x: hidden;
+    margin-bottom: 1vw;
+}
+
+.elem1 h1{
+    font-size: 7vw;
+    -webkit-text-stroke: 1px #fff;
+    font-weight: 500;
+    color: transparent;
+    text-transform: uppercase;
+    display: inline-block;
+    margin-right:1vw;
+    animation-name: anime2;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-duration: 10s;
+    animation-delay: 2s;
+}
+
+@keyframes anime2 {
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(calc(-100% - 20px));
+    }
+}
+
+.elem2{
+    white-space: nowrap;
+    overflow-x: hidden;
+    margin-bottom: 1vw;
+}
+
+.elem2 h1{
+    font-size: 7vw;
+    -webkit-text-stroke: 1px #fff;
+    font-weight: 500;
+    color: transparent;
+    text-transform: uppercase;
+    display: inline-block;
+    margin-right:1vw;
+    animation-name: anime2;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-duration: 10s;
+    animation-delay: 2s;
+    animation-direction: reverse;
+}
+
+#page5 span{
+    font-family: "silk serif";
+    font-style: italic;
+    font-size: 7vw;
+    -webkit-text-stroke: 1px #fff;
+    font-weight: 500;
+    color: transparent;
+    text-transform: uppercase;
+}
+
+#footer{
+    min-height:120vh;
+    width: 100%;
+    position: relative;
+    
+    padding-left: 28%;
+    padding-right: 5vw;
+    background-color: #151515;
+}
+
+#footer h1{
+    padding-top: 1vh;
+    font-size: 8vw;
+    text-transform: uppercase;
+    font-family: "silk serif";
+    -webkit-text-stroke: 1px #fff;
+    color: transparent;
+    font-weight: 400;
+}
+
+.underline{
+    width: 100%;
+    height: 0.3vh;
+    margin-left: 28%;
+    margin: 6vh 0vw;
+    background-color: white;
+}
+
+#footer-div{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding-right: 8vw;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+    margin-bottom: 3vh;
+    padding-right: 20vw;
+}
+
+#footer-div h6{
+    font-size: 1.1vw;
+    margin-bottom: 1.8vh;
+}
+
+.box{
+    width: 20%;
+}
+
+#footer-div h5{
+    font-size: 1.8vw;
+    font-weight: 400;
+    margin: 0.2vh 0vw;
+}
+
+#footer>h5{
+    font-size: 1.2vw;
+    font-weight: 500;
+}
+
+#footer h1::before{
+    content: "04";
+    position: absolute;
+    font-family: "silk serif";
+    font-size: 4vw;
+    left: 17%;
+    font-weight: 400;
+    color: white;
+}
+
+._canvas_container{
+    z-index: 99999 !important;
+    pointer-events: none;
+}
+
+#flag{
+    height: 25vw;
+    width: 15vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity:0;
+    transform: translate(-50%,-50%);
+}
+
+#hero3{
+    position: relative;
+    z-index: 999;
 }
